--- a/login.html
+++ b/login.html
@@ -6,48 +6,57 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="login.css">
-  <script src="https://static.nid.naver.com/js/naveridlogin_js_sdk_2.0.2.js" charset="utf-8"></script>
-  <script src="https://kit.fontawesome.com/536e37fbfc.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <div class="container">
-    <form >
-        <h4>로그인</h4>
-        <div class="id">
-            <input type="id" placeholder="ID를 입력하세요.">
-            <i class="fa-solid fa-user"></i>
-        </div>
-        <div class="password">
-            <input type="password" placeholder="비밀번호를 입력하세요.">
-            <ion-icon name="lock"></ion-icon>
-        </div>
-        <label class="keepsignedIn">
-          <input type="checkbox">
-          자동로그인
+    <form>
+      <h4>로그인</h4>
+      <div class="id">
+        <input type="id" placeholder="ID를 입력하세요.">
+        <i class="fa-solid fa-user"></i>
+      </div>
+      <div class="password">
+        <input type="password" placeholder="비밀번호를 입력하세요.">
+        <ion-icon name="lock"></ion-icon>
+      </div>
+      <label class="keepsignedIn">
+        <input type="checkbox">
+        자동로그인
       </label>
-        <input type="submit" value="Login">
-        <a id="naverIdLogin_loginButton" href="javascript:void(0)">
-          <img src="./img/btnW_로그인.png" alt="">
+      <input type="submit" value="Login">
+      <a id="naverIdLogin_loginButton" href="javascript:void(0)">
+        <img src="./img/btnW_로그인.png" alt="">
       </a>
-        <div class="footerForm">
-            <label class="SignUp">
-              <a href="#" class="forgot">비밀번호 찾기</a><a href="#">회원가입</a>
-            </label>
-        </div>
-    </form>
-</div>
-<script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
-
-
-    <!-- <li onclick="naverLogout(); return false;">
-        <a href="javascript:void(0)">
-            <span>네이버 로그아웃</span>
-        </a>
-    </li> -->
-  </ul>
+      <a id="kakaoBtn" href="javascript:void(0)" onclick="kakaoLogin();">
+        <img src="./img/kakao_login_medium_narrow.png"></img>
+      </a>
   
+  
+  
+      <div class="footerForm">
+        <label class="SignUp">
+          <a href="#" class="forgot">비밀번호 찾기</a><a href="#">회원가입</a>
+        </label>
+      </div>
+    </form>
+  </div>
 
+
+    <!-- 
+      <a href="javascript:void(0)"  onclick="naverLogout(); return false;">
+          <span>네이버 로그아웃</span>
+      </a>
+
+      <a href="javascript:void(0)" onclick="kakaoLogout();">
+        <span>카카오 로그아웃</span>
+      </a>
+    -->
+
+  <script src="https://static.nid.naver.com/js/naveridlogin_js_sdk_2.0.2.js" charset="utf-8"></script>
+  <script src="https://kit.fontawesome.com/536e37fbfc.js" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
   <script src="./js/naver-login.js"></script>
-
+  <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+  <script src="./js/kakao-login.js"></script>\
 </body>
 </html>
