--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>가나다라마바사</h1>
-  <li onclick="naverLogout(); return false;">
-    <a href="javascript:void(0)">
-        <span>네이버 로그아웃</span>
-    </a>
-</li>
-  <script src="./js/naver-login.js"></script>
+
+  <a href="javascript:void(0)"  onclick="naverLogout(); return false;">
+    <span>네이버 로그아웃</span>
+</a>
+
+<a href="javascript:void(0)" onclick="kakaoLogout(); return false;">
+  <span>카카오 로그아웃</span>
+</a>
+<script src="./js/naver-login.js"></script>
+<script src="./js/kakao-login.js"></script>
 </body>
 </html>
