--- a/login.html
+++ b/login.html
@@ -8,15 +8,30 @@
   <link rel="stylesheet" href="login.css">
 </head>
 <body>
+
+<!-- 헤더 영역 -->
+  <header>
+    <div class="header">
+      <div class="header-logo">
+        <img src="./img/seagull.png">
+        <div>잘놀다갑니다</div>
+      </div>
+    </div>
+  </header>
+
+
+
+
+<!-- 로그인 폼 -->
   <div class="container">
-    <form>
+    <form id="loginForm">
       <h4>로그인</h4>
       <div class="id">
-        <input type="id" placeholder="ID를 입력하세요.">
+        <input id="idInput" type="id" placeholder="ID를 입력하세요." maxlength="15" required>
         <i class="fa-solid fa-user"></i>
       </div>
-      <div class="password">
-        <input type="password" placeholder="비밀번호를 입력하세요.">
+      <div id="password" class="password">
+        <input type="passwordInput" placeholder="비밀번호를 입력하세요."maxlength="20" required>
         <ion-icon name="lock"></ion-icon>
       </div>
       <label class="keepsignedIn">
@@ -33,7 +48,7 @@
   
   
   
-      <div class="footerForm">
+      <div class="lowForm">
         <label class="SignUp">
           <a href="#" class="forgot">비밀번호 찾기</a><a href="#">회원가입</a>
         </label>
@@ -52,11 +67,14 @@
       </a>
     -->
 
+
+  <!-- 스크립트 -->
   <script src="https://static.nid.naver.com/js/naveridlogin_js_sdk_2.0.2.js" charset="utf-8"></script>
   <script src="https://kit.fontawesome.com/536e37fbfc.js" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
   <script src="./js/naver-login.js"></script>
   <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
-  <script src="./js/kakao-login.js"></script>\
+  <script src="./js/kakao-login.js"></script>
+  <script src="./js/login.js"></script>
 </body>
 </html>
