--- a/login.html
+++ b/login.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="login.css">
+  <title>잘놀다갑니다</title>
+  <link rel="stylesheet" href="./css/login.css">
 </head>
 <body>
 
@@ -14,7 +14,7 @@
     <div class="header">
       <div class="header-logo">
         <img src="./img/seagull.png">
-        <div>잘놀다갑니다</div>
+        <div>잘 놀다 갑니다</div>
       </div>
     </div>
   </header>
