--- a/newsAll.html
+++ b/newsAll.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/news.css">
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+    
     
 </head>
 <body>
@@ -45,7 +45,7 @@
           </div>
           <div class="content">
             <div class="item">
-                <div class="item-text wrap1"></div><!-- 부산통합공지사항 영역 -->
+            <div class="item-text wrap1"></div><!-- 부산통합공지사항 영역 -->
             </div>
             <div class="item">
               <div class="item-text wrap2"></div><!-- 부산 채용공고 영역 -->
@@ -98,10 +98,11 @@
 
 
 
-
-   <script src="./js/news.js"></script>
-   <script src="./js/busanIntroduce.js"></script>
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js" integrity="sha512-VEBjfxWUOyzl0bAwh4gdLEaQyDYPvLrZql3pw1ifgb6fhEvZl9iDDehwHZ+dsMzA0Jfww8Xt7COSZuJ/slxc4Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+  <script src="./js/news.js"></script>
+  <script src="./js/busanIntroduce.js"></script>
+  <script src="https://kit.fontawesome.com/536e37fbfc.js" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js" integrity="sha512-VEBjfxWUOyzl0bAwh4gdLEaQyDYPvLrZql3pw1ifgb6fhEvZl9iDDehwHZ+dsMzA0Jfww8Xt7COSZuJ/slxc4Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/ScrollToPlugin.min.js" integrity="sha512-lZACdYsy0W98dOcn+QRNHDxFuhm62lfs8qK5+wPp7X358CN3f+ml49HpnwzTiXFzETs4++fADePDI+L2zwlm7Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </body>
 
