--- a/privacyPolicy.html
+++ b/privacyPolicy.html
@@ -7,6 +7,7 @@
   <title>잘놀다갑니다</title>
   <link rel="stylesheet" href="./css/help.css">
   <link rel="stylesheet" href="./css/common.css">
+  <link rel="stylesheet" href="./css/destyle.css">
   <link rel="stylesheet" href="./css/modal_inquiry.css">
 
 </head>
@@ -56,7 +57,7 @@
 
       <div class="noti-container">
         <div class="noti-main">
-          <div class="noti-title">도움말</div>
+          <div class="noti-title">도움말&nbsp&nbsp<i  class="fa-solid fa-circle-question"></i></div>
         </div>
         <div class="noti-sub">
           <ul>
@@ -64,14 +65,6 @@
             <li class="noti-sub-menu"><a href="#">계정</a></li>
             <li class="noti-sub-menu"><a href="./privacyPolicy.html">개인정보정책</a></li>
             <li class="noti-sub-menu"><a href="./etc.html">기타</a></li>
-          </ul>
-        </div>
-        <div>
-          <ul class="noti-bg-list">
-            <li class="noti-sub-bg1 bg"><span class="noti-sub-bg"></span></li>
-            <li class="noti-sub-bg2 bg"><span class="noti-sub-bg"></span></li>
-            <li class="noti-sub-bg3 bg"><span class="noti-sub-bg"></span></li>
-            <li class="noti-sub-bg4 bg"><span class="noti-sub-bg"></span></li>
           </ul>
         </div>
         <ul class="noti-ul">
