--- a/setting.html
+++ b/setting.html
@@ -56,7 +56,7 @@
 
     <div class="noti-container">
       <div class="noti-main">
-        <div class="noti-title">설정</div>
+        <div class="noti-title">설정&nbsp&nbsp<i class="fa-solid fa-gear"></i></div>
       </div>
       <ul class="noti-ul">
         <li>
