--- a/signUp.html
+++ b/signUp.html
@@ -6,16 +6,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>잘놀다갑니다</title>
   <link rel="stylesheet" href="./css/signUp.css">
+  <link rel="stylesheet" href="./css/destyle.css">
+  <link rel="stylesheet" href="./css/common.css">
 </head>
 <body>
 
 <!-- 헤더 영역 -->
   <header>
     <div class="header">
-      <div class="header-logo">
+      <a href="./index.html" class="header-logo">
         <img src="./images/seagull.png">
         <div>잘놀다갑니다</div>
-      </div>
+      </a>
     </div>
   </header>
 
@@ -42,7 +44,7 @@
         <input type="text" placeholder="휴대폰 번호 입력하세요" maxlength="11" required>
         <ion-icon name="call"></ion-icon>
       </div>
-      <div>
+      <div class="btn">
         <input type="submit" value="회원가입">
         <button class="go_login"><a class="go_login_a" href="./login.html">로그인으로</a></button>
       </div>
