--- a/newsAll.html
+++ b/newsAll.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/destyle.css">
     <link rel="stylesheet" href="./css/news.css">
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
@@ -66,12 +67,10 @@
                   &lt
                 </a>
               </li>
-              <span class="pagemove-number">
-                <li><a class="current" href="javascript:void(0)">1</a></li>
-                <li><a href="javascript:void(0)">2</a></li>
-                <li><a href="javascript:void(0)">3</a></li>
-                <li><a href="javascript:void(0)">4</a></li>
-              </span>
+              <li class="pagemove-number"><a href="javascript:void(0)">1</a></li>
+              <li class="pagemove-number"><a href="javascript:void(0)">2</a></li>
+              <li class="pagemove-number"><a href="javascript:void(0)">3</a></li>
+              <li class="pagemove-number"><a href="javascript:void(0)">4</a></li>
               <li class="pagemove-Arrow">
                 <a href="javascript:void(0)">
                   &gt
@@ -85,7 +84,7 @@
 
 
       <!-- 푸터 -->
-      <footer>
+      <footer style="background: #dcdcdc90;">
         <div class="footer">
           <div class="footer-information">
             팀장 : 박휘원 | 전화번호 : 010-4623-0195 <br><br>
