--- a/notice.html
+++ b/notice.html
@@ -6,6 +6,7 @@
  <title>잘놀다갑니다</title>
  <link rel="stylesheet" href="./css/notice.css" >
  <link rel="stylesheet" href="./css/common.css">
+ <link rel="stylesheet" href="./css/destyle.css">
  <link rel="stylesheet" href="./css/modal_inquiry.css">
 </head>
 <body>
@@ -46,14 +47,14 @@
           <a href="">문의하기</a><i class="fa-solid fa-person-circle-question"></i>
         </div>
         <div class="l-menu">
-          <a href="">설정</a><i class="fa-solid fa-gear"></i>
+          <a href="./setting.html">설정</a><i class="fa-solid fa-gear"></i>
         </div>
       </div>
     </div>
 
     <div class="noti-container">
       <div class="noti-main">
-        <div class="noti-title">공지사항</div>
+        <div class="noti-title">공지사항&nbsp&nbsp<i class="fa-solid fa-bullhorn"></i></div>
       </div>
       <ul class="noti-ul">
         <li class="noti-list">
@@ -138,7 +139,7 @@
 
 
   <script src="./js/noti-list.js"></script>
-  <script src="./js/inquiry-modal.js"></script>
+  <script src="./js/modal.js"></script>
   <script src="https://kit.fontawesome.com/536e37fbfc.js" crossorigin="anonymous"></script>
 
 
