세부사항 수정

--- a/busanIntroduce.html
+++ b/busanIntroduce.html
@@ -27,7 +27,7 @@
       <ul class="header-menu">
         <li><a href="./busanIntroduce.html">부산소개</a></li>
         <li><a href="./community.html">커뮤니티</a></li>
-        <li><a href="./news.html">소식</a></li>
+        <li><a href="./newsAll.html">소식</a></li>
         <li><a href="./photo.html">포토</a></li>
       </ul>
       <div class="header-login">
@@ -93,7 +93,9 @@
     </div>
   </footer>
   <!-- 위로 이동 버튼 -->
-  <span id="moveup" class="material-symbols-outlined">arrow_circle_up</span>
-  <script src="./js/busanIntroduce.js"></script>
+  <div class="moveBnt">
+    <span id="moveup" class="material-symbols-outlined">arrow_circle_up</span>
+    <a href="#"><img class="bugi" src="./images/bugi3d100.png" /></a>
+  </div>
 </body>
 </html>
