--- a/newsBusanIntegrated.html
+++ b/newsBusanIntegrated.html
@@ -91,7 +91,10 @@
         </div>
       </footer>
 
-      <span id="moveup" class="material-symbols-outlined">arrow_circle_up</span>
+      <div class="moveBnt">
+        <span id="moveup" class="material-symbols-outlined">arrow_circle_up</span>
+        <a href="#"><img class="bugi" src="./images/bugi3d100.png" /></a>
+      </div>
 
 
 
