--- a/notice.html
+++ b/notice.html
@@ -139,7 +139,7 @@
 
 
   <script src="./js/noti-list.js"></script>
-  <script src="./js/modal.js"></script>
+  <script src="./js/modal_inquiry.js"></script>
   <script src="https://kit.fontawesome.com/536e37fbfc.js" crossorigin="anonymous"></script>
 
 
