--- a/setting.html
+++ b/setting.html
@@ -203,7 +203,11 @@
 </div>
 
 
-<script src="./js/modal.js"></script>
+<script src="./js/modal_changeNum.js"></script>
+<script src="./js/modal_changePhone.js"></script>
+<script src="./js/modal_inquiry.js"></script>
+<script src="./js/modal_signOut.js"></script>
+
 <script src="https://kit.fontawesome.com/536e37fbfc.js" crossorigin="anonymous"></script>
 
 
