--- a/help.html
+++ b/help.html
@@ -22,8 +22,8 @@
       <ul class="header-menu">
         <li><a href="./busanIntroduce.html">부산소개</a></li>
         <li><a href="./community.html">커뮤니티</a></li>
-        <li><a href="javascript:void(0)">소식</a></li>
-        <li><a href="javascript:void(0)">포토</a></li>
+        <li><a href="./newsAll.html">소식</a></li>
+        <li><a href="#">포토</a></li>
       </ul>
       <div class="header-login">
         <a href="./login.html">로그인</a>
@@ -146,7 +146,7 @@
 
 
 <script src="./js/noti-list.js"></script>
-<script src="./js/modal.js"></script>
+<script src="./js/modal_inquiry.js"></script>
 <script src="https://kit.fontawesome.com/536e37fbfc.js" crossorigin="anonymous"></script>
 </body>
 
