--- a/newsAll.html
+++ b/newsAll.html
@@ -11,8 +11,6 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 <script src="https://kit.fontawesome.com/536e37fbfc.js" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js" integrity="sha512-VEBjfxWUOyzl0bAwh4gdLEaQyDYPvLrZql3pw1ifgb6fhEvZl9iDDehwHZ+dsMzA0Jfww8Xt7COSZuJ/slxc4Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/ScrollToPlugin.min.js" integrity="sha512-lZACdYsy0W98dOcn+QRNHDxFuhm62lfs8qK5+wPp7X358CN3f+ml49HpnwzTiXFzETs4++fADePDI+L2zwlm7Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script defer src="./js/news.js"></script>
 <script defer src="./js/newsEmployment.js"></script>
 <script defer src="./js/newsKookje.js"></script>
@@ -96,14 +94,14 @@
       </footer>
 
 
-      <span id="moveup" class="material-symbols-outlined">arrow_circle_up</span>
-
-
+      <div class="moveBnt">
+        <span id="moveup" class="material-symbols-outlined">arrow_circle_up</span>
+        <a href="#"><img class="bugi" src="./images/bugi3d100.png" /></a>
+      </div>
 
 
 
   
-
   <script src="./js/busanIntroduce.js"></script>
   
   
