--- a/index.html
+++ b/index.html
@@ -10,8 +10,15 @@
  <!-- 기타 -->
  <link rel="stylesheet" href="./css/common.css" >
  <link rel="stylesheet" href="./css/index.css">
+ <link rel="stylesheet" href="./css/jquery.multiscroll.css">
 
+
+ <script
+ src="https://code.jquery.com/jquery-3.6.0.min.js"
+ integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+ crossorigin="anonymous"></script>
  <script src="https://kit.fontawesome.com/536e37fbfc.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
   <!-- 헤더 -->
@@ -29,65 +36,15 @@
       </ul>
       <div class="header-login">
         <a href="./login.html">로그인</a>
-        
         <a href="./signUp.html">회원가입</a>
       </div>
     </div>
   </header>
-  <!-- 메인 -->
-  <div class="space"></div>
-  <main>
-    <section class="main-section1">
-      <h1></h1>
-      <h2></h2>
-      <a href="./signUp.html"><button>지금 바로 회원가입</button></a>
-    </section>
-    <section class="main-section2">
-      <div class="main-section2-img">
-        <img src="./images/YongdusanPark.jpeg">
-      </div>
-      <div class="main-section2-text">
-        <h2>바다의 도시</h2>
-        <h3>제2의 수도이자 항구도시 부산이 궁금하다면?</h3>
-        <a href="./busanIntroduce.html"><button>부산소개 바로가기</button></a>
-      </div>
-    </section>
-    <section class="main-section3">
-      <div class="main-section3-text">
-        <h2>정보공유</h2>
-        <h3>다양한 사람들과 정보를 공유해요</h3>
-        <a href="#"><button>커뮤니티 바로가기</button></a>
-      </div>
-      <div class="main-section3-img">
-        <img src="./images/Nampodong.jpg">
-      </div>
-    </section>
-    <section class="main-section4">
-      <div class="main-section4-text">
-        <h2>소식통</h2>
-        <h3>부산과 관련된 공지 및 뉴스</h3>
-        <a href="./newsAll.html"><button>소식 바로가기</button></a>
-      </div>
-      <div class="main-section4-img">
-        <img src="./images/cinemaHall.jpg">
-      </div>
-    </section>
-    <section class="main-section5">
-      <div class="main-section5-img">
-        <img src="./images/Nurimaru3.jpg">
-      </div>
-      <div class="main-section5-text">
-        <h2>항구도시 부산</h2>
-        <h3>부산의 아름다운 view가 궁금하다면?</h3>
-        <a href="#"><button>포토 바로가기</button></a>
-      </div>
-    </section>
-  </main>
+
   <!-- 푸터 -->
   <footer>
     <div class="footer">
       <div class="footer-information">
-        <br><br>
         팀장 : 박휘원 | 전화번호 : 010-4623-0195 <br><br>
         팀원 : 송민영 | 전화번호 : 010-8800-3995 <br><br>
         팀원 : 최낙원 | 전화번호 : 010-9753-0266 <br><br>
@@ -95,14 +52,98 @@
       </div>
     </div>
   </footer>
-    <!-- 위로 이동 버튼 -->
-    <div class="moveBnt">
-      <span id="moveup" class="material-symbols-outlined">arrow_circle_up</span>
-      <a href="#"><img class="bugi" src="./images/bugi3d100.png" /></a>
+
+
+
+  <!-- 메인 -->
+
+
+<main>
+  <div id="myContainer">
+
+    <div class="ms-left">
+        <div class="ms-section main-section1" id="left1">
+          <div class="main-section1-text">
+            <h1></h1>
+            <h2></h2>
+            <a href="./signUp.html"><button>지금 바로 회원가입</button></a>
+          </div>
+        </div>
+
+        <div class="ms-section main-section2" id="left2">
+          <div class="main-section2-img">
+            <img src="./images/YongdusanPark.jpeg">
+          </div>
+        </div>
+
+        <div class="ms-section main-section3" id="left3">
+          <div class="main-section3-text">
+            <h2>정보공유</h2>
+            <h3>다양한 사람들과 정보를 공유해요</h3>
+            <a href="#"><button>커뮤니티 바로가기</button></a>
+          </div>
+        </div>
+
+        <div class="ms-section main-section4" id="left4">
+          <div class="main-section4-img">
+            <img src="./images/cinemaHall.jpg">
+          </div>
+        </div>
+
+        <div class="ms-section main-section5" id="left5">
+          <div class="main-section5-text">
+            <h2>항구도시 부산</h2>
+            <h3>부산의 아름다운 view가 궁금하다면?</h3>
+            <a href="#"><button>포토 바로가기</button></a>
+          </div>
+        </div>
     </div>
 
+    <div class="ms-right">
+        <div class="ms-section main-section1" id="right1">
+          <div class="main-section1-img">
+            <img src="./images/YongdusanPark.jpeg">
+          </div>
+        </div>
+       
+        <div class="ms-section main-section2" id="right2">
+          <div class="main-section2-text">
+            <h2>바다의 도시</h2>
+            <h3>제2의 수도이자 항구도시 부산이 궁금하다면?</h3>
+            <a href="./busanIntroduce.html"><button>부산소개 바로가기</button></a>
+          </div>
+        </div>
+
+        <div class="ms-section main-section3" id="right3">
+          <div class="main-section3-img">
+            <img src="./images/Nampodong.jpg">
+          </div>
+        </div>
+
+        <div class="ms-section main-section4" id="right4">
+          <div class="main-section4-text">
+            <h2>소식통</h2>
+            <h3>부산과 관련된 공지 및 뉴스</h3>
+            <a href="./newsAll.html"><button>소식 바로가기</button></a>
+          </div>
+        </div>
+
+        <div class="ms-section main-section5" id="right5">
+          <div class="main-section5-img">
+            <img src="./images/Nurimaru3.jpg">
+          </div>
+        </div>
+    </div>
+</div>
+</main>
 
 
+    <!-- 부산 부기 캐릭터 -->
+      <a href="#"><img class="bugi" src="./images/bugi3d100.png" /></a>
+
+
+    <script src="./js/scroll.js"></script>
+    <script src="./js/jquery.multiscroll.js"></script>
     <script src="./js/busanIntroduce.js"></script>
 </body>
 </html>
