--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
  <link rel="stylesheet" href="./css/common.css" >
  <link rel="stylesheet" href="./css/index.css">
  <link rel="stylesheet" href="./css/jquery.multiscroll.css">
+ <link rel="icon" href="./images/favicon.ico" type="image/x-icon" sizes="16x16">
 
 
  <script
@@ -64,8 +65,8 @@
     <div class="ms-left">
         <div class="ms-section main-section1" id="left1">
           <div class="main-section1-text">
-            <h1></h1>
-            <h2></h2>
+            <h2>잘놀다갑니다</h2>
+            <h3>한 번 놀때 잘 놀자, 부산여행은 잘 놀다 갑니다</h3>
             <a href="./signUp.html"><button>지금 바로 회원가입</button></a>
           </div>
         </div>
@@ -138,12 +139,7 @@
 </main>
 
 
-    <!-- 부산 부기 캐릭터 -->
-      <a href="#"><img class="bugi" src="./images/bugi3d100.png" /></a>
-
-
     <script src="./js/scroll.js"></script>
     <script src="./js/jquery.multiscroll.js"></script>
-    <script src="./js/busanIntroduce.js"></script>
 </body>
 </html>
