--- a/setting.html
+++ b/setting.html
@@ -10,6 +10,7 @@
  <link rel="stylesheet" href="./css/modal_changeNum.css">
  <link rel="stylesheet" href="./css/modal_changePhone.css">
  <link rel="stylesheet" href="./css/modal_signOut.css">
+ <link rel="icon" href="./images/favicon.ico" type="image/x-icon" sizes="16x16">
 </head>
 <body>
   <!-- 헤더 -->
