--- a/findpassword.html
+++ b/findpassword.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="./css/findpassword.css">
   <link rel="stylesheet" href="./css/common.css">
   <link rel="stylesheet" href="./css/destyle.css">
+  <link rel="icon" href="./images/favicon.ico" type="image/x-icon" sizes="16x16">
 </head>
 <body>
 
