--- a/login.html
+++ b/login.html
@@ -26,6 +26,7 @@
   <link rel="stylesheet" href="./css/login.css">
   <link rel="stylesheet" href="./css/destyle.css">
   <link rel="stylesheet" href="./css/common.css">
+  <link rel="icon" href="./images/favicon.ico" type="image/x-icon" sizes="16x16">
 
 </head>
 <body>
