--- a/privacyPolicy.html
+++ b/privacyPolicy.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="./css/common.css">
   <link rel="stylesheet" href="./css/destyle.css">
   <link rel="stylesheet" href="./css/modal_inquiry.css">
+  <link rel="icon" href="./images/favicon.ico" type="image/x-icon" sizes="16x16">
 
 </head>
 
