왼쪽 사이드메뉴 클릭 안되는것 수정 도움말, 계정, 개인정보정책, 기타 콘텐츠와 푸터 겹침 문제 해결해야함

--- a/프론트 - 최종본/help.html
+++ b/프론트 - 최종본/help.html
@@ -41,16 +41,16 @@
     <div class="leftSide">
       <div class="l-sidebar">
         <div class="l-menu">
-          <a href="./notice.html">공지사항</a><i class="fa-solid fa-bullhorn"></i>
+          <a href="./notice.html">공지사항<i class="fa-solid fa-bullhorn"></i></a>
         </div>
         <div class="l-menu">
-          <a href="#">도움말</a><i class="fa-solid fa-circle-question"></i>
+          <a href="./help.html">도움말<i class="fa-solid fa-circle-question"></i></a>
         </div>
         <div class="l-menu inquiry">
-          <a>문의하기</a><i class="fa-solid fa-person-circle-question"></i>
+          <a>문의하기<i class="fa-solid fa-person-circle-question"></i></a>
         </div>
         <div class="l-menu">
-          <a href="./setting.html">설정</a><i class="fa-solid fa-gear"></i>
+          <a href="./setting.html">설정<i class="fa-solid fa-gear"></i></a>
         </div>
       </div>
     </div>
