--- a/프론트 - 최종본/privacyPolicy.html
+++ b/프론트 - 최종본/privacyPolicy.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="./css/common.css">
   <link rel="stylesheet" href="./css/destyle.css">
   <link rel="stylesheet" href="./css/modal_inquiry.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
   <link rel="icon" href="./images/favicon.ico" type="image/x-icon" sizes="16x16">
 
 </head>
@@ -42,16 +43,16 @@
     <div class="leftSide">
       <div class="l-sidebar">
         <div class="l-menu">
-          <a href="./notice.html">공지사항</a><i class="fa-solid fa-bullhorn"></i>
+          <a href="./notice.html">공지사항<i class="fa-solid fa-bullhorn"></i></a>
         </div>
         <div class="l-menu">
-          <a href="./help.html">도움말</a><i class="fa-solid fa-circle-question"></i>
+          <a href="./help.html">도움말<i class="fa-solid fa-circle-question"></i></a>
         </div>
         <div class="l-menu inquiry">
-          <a>문의하기</a><i class="fa-solid fa-person-circle-question"></i>
+          <a>문의하기<i class="fa-solid fa-person-circle-question"></i></a>
         </div>
         <div class="l-menu">
-          <a href="./setting.html">설정</a><i class="fa-solid fa-gear"></i>
+          <a href="./setting.html">설정<i class="fa-solid fa-gear"></i></a>
         </div>
       </div>
     </div>
@@ -140,6 +141,10 @@
     </div>
   </footer>
 
+  <div class="moveBnt">
+    <span id="moveup" class="material-symbols-outlined">arrow_circle_up</span>
+    <a href="#"><img class="bugi" src="./images/bugi3d100.png" /></a>
+  </div>
 
  <!-- 문의모달 -->
   
@@ -172,6 +177,8 @@
   </div>
 </div>
 </div>
+
+
 
 
 <script src="./js/noti-list.js"></script>
