--- a/프론트 - 최종본/notice.html
+++ b/프론트 - 최종본/notice.html
@@ -39,16 +39,16 @@
     <div class="leftSide">
       <div class="l-sidebar">
         <div class="l-menu">
-          <a href="#">공지사항</a><i class="fa-solid fa-bullhorn"></i>
+          <a href="./notice.html">공지사항<i class="fa-solid fa-bullhorn"></i></a>
         </div>
         <div class="l-menu">
-          <a href="./help.html">도움말</a><i class="fa-solid fa-circle-question"></i>
+          <a href="./help.html">도움말<i class="fa-solid fa-circle-question"></i></a>
         </div>
         <div class="l-menu inquiry">
-          <a href="">문의하기</a><i class="fa-solid fa-person-circle-question"></i>
+          <a>문의하기<i class="fa-solid fa-person-circle-question"></i></a>
         </div>
         <div class="l-menu">
-          <a href="./setting.html">설정</a><i class="fa-solid fa-gear"></i>
+          <a href="./setting.html">설정<i class="fa-solid fa-gear"></i></a>
         </div>
       </div>
     </div>
